<resources>
    <string name="app_name">CriminalIntent</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">제목</string>
    <string name="crime_title_hint">범죄 제목을 입력하세요.</string>
    <string name="crime_detail">상세내역</string>
    <string name="crime_resolve">해결됨?</string>
    <string name="date_picker_dialog">범죄 발생 일자</string>
    <string name="subtitle_format">%1$d 건</string>
</resources>
